# Haskrabble

./: CHANGELOG.md  Main.hs  logostart.txt  scrabble.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
