cabal-version:      2.4
name:               scrabble
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             jasonthomas
maintainer:         jason@tourizen.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable scrabble
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , array
                    , random
                    , random-shuffle
                    , mtl
                    , ghc
                    , ansi-terminal
                    , http-conduit
                    , aeson
                    , bytestring

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
